@@ -1,3 +1,7 @@
+2002-06-11  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* THANKS (Contributions): Add Mark Horn.
+
 2002-06-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* THANKS (Contributions): Update Drew Raines.
